objects/Change_Request__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Completion_Date__c</fullName>
        <description>Actual Completion Date</description>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Business_Lead__c</fullName>
        <label>Approval Business Lead</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Contact_Center__c</fullName>
        <description>Contact Center Approval dropdown menu.
Mike Monson.</description>
        <label>Approval Contact Center</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need more info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Corporate_Accounts__c</fullName>
        <description>Options for approving Change Requests by Corporate Accounts.</description>
        <label>Approval Corporate Accounts</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Learning_Services__c</fullName>
        <label>Approval Learning Services</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Marketing_Support__c</fullName>
        <label>Approval Marketing Support</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_NCR__c</fullName>
        <label>Approval NCR</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_NER__c</fullName>
        <label>Approval NER</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Project_Sponsors__c</fullName>
        <label>Approval Project Sponsors</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_SCR__c</fullName>
        <label>Approval SCR</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_SER__c</fullName>
        <label>Approval SER</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_WER__c</fullName>
        <label>Approval WER</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approvals__c</fullName>
        <formula>IF(  ISPICKVAL(Approval_Business_Lead__c, &quot;Approve&quot;), 1,0) + IF(  ISPICKVAL( Approval_Marketing_Support__c , &quot;Approve&quot;), 1,0)  + IF(  ISPICKVAL( Approval_Learning_Services__c , &quot;Approve&quot;), 1,0) + IF(  ISPICKVAL( Approval_NCR__c , &quot;Approve&quot;), 1,0) + IF(  ISPICKVAL( Approval_NER__c , &quot;Approve&quot;), 1,0) + IF(  ISPICKVAL( Approval_Project_Sponsors__c , &quot;Approve&quot;), 1,0) + IF(  ISPICKVAL( Approval_SCR__c , &quot;Approve&quot;), 1,0) + IF(  ISPICKVAL( Approval_SER__c , &quot;Approve&quot;), 1,0) + IF(  ISPICKVAL( Approval_WER__c , &quot;Approve&quot;), 1,0) + IF(  ISPICKVAL( Approval_Contact_Center__c , &quot;Approve&quot;), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approvals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approver_Comments__c</fullName>
        <label>Approver Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AssignTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assign Change Request for Deployment.</description>
        <label>Deployment Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000001RTtIEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <picklist>
            <picklistValues>
                <fullName>Bonnie Briant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brian Feldtman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eva DeLorio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kathy Miller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maria Fitzsimons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheila McEvoy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signe Einess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration - Shashank Makhija</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Management - Market Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Security - David Williamson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Benefit_Measure__c</fullName>
        <description>BENEFIT MEASUREMENT: Define how we will measure the benefit of the solution.</description>
        <label>Benefit Measure</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Benefits_of_Proposed_Solution__c</fullName>
        <description>BENEFITS OF PROPOSED SOLUTION: Clearly and concisely list benefits statements for your proposed solution. Include productivity gains where applicable, as well as potential for increased revenue. Reference the tangible (hard dollar) and intangible (soft dollar) savings, and where possible, reference the business drivers associated with these statements.</description>
        <label>Benefits of Proposed Solution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Drivers__c</fullName>
        <label>Business Drivers</label>
        <picklist>
            <picklistValues>
                <fullName>Optimization of Internal Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Growth/Margin Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Describe in text field)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Business_Opportunity_or_Problem__c</fullName>
        <description>Clearly and concisely describe the business opportunity at hand or the business problem you are trying to solve. Depending on complexity, you may choose to organize your statement into paragraphs labeled: Background, Current Process Overview, Problems Identified, and/or Opportunity.</description>
        <label>Business Opportunity or Problem</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <description>Reason for cancelling the request</description>
        <label>Cancellation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Champ_Discussion__c</fullName>
        <description>Date of Champions Discussion Meeting</description>
        <label>Champ Discussion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Change_Request_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending I.S. Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending L.S. Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deployment__c</fullName>
        <description>Date the change was deployed</description>
        <label>Deployment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <description>Estimated Completion Date</description>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Approval__c</fullName>
        <description>Date Change Request is approved by Laine deJong</description>
        <label>Final Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>I_S_Cost_Estimate_Required__c</fullName>
        <label>I.S. Cost Estimate Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>I_S_Cost_Estimate__c</fullName>
        <label>I.S. Cost Estimate</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L_S_Cost_Estimate_Required__c</fullName>
        <label>L.S. Cost Estimate Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>L_S_Cost_Estimate__c</fullName>
        <label>L.S. Cost Estimate</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Description__c</fullName>
        <label>Other Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposed_Solution__c</fullName>
        <description>PROPOSED SOLUTION: Clearly and concisely, describe the solution you are proposing to address the business opportunity at hand or the business problem. Specify proposed changes to business processes and, if required, to technology application systems or infrastructure. INCLUDE AN EXPLANATION OF THE IMPACT OF DOING NOTHING.</description>
        <label>Proposed Solution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remedy_CRQ__c</fullName>
        <inlineHelpText>Numeric portion of the Remedy  Change Request  (&quot;CRQ&quot;) number corresponding to this change.  All changes must be entered as CRQ tickets in Remedy before closing in SFDC.</inlineHelpText>
        <label>Remedy CRQ #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Worklog__c</fullName>
        <description>Worklog, 32,000 characters</description>
        <label>Worklog</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>